--- a/src/style.css
+++ b/src/style.css
@@ -20,9 +20,10 @@ body {
   background-color: #f8f9fa;
 }
 
+.plus-circle-icon,
 .refrsh-img {
-  height: 18px;
-  width: 18px;
+  height: 20px;
+  width: 20px;
 }
 
 .flex-center-column {
@@ -115,4 +116,10 @@ body {
   background: none;
   font-size: 18px;
   color: #4a4c4e;
+}
+
+.plus-circle-icon {
+  position: absolute;
+  right: 10px;
+  top: 8px;
 }
