--- a/src/style.css
+++ b/src/style.css
@@ -144,6 +144,7 @@ i { cursor: pointer; }
 .disabled {
   font-size: 0.6rem;
   font-style: italic;
+  text-decoration: line-through;
 }
 
 .focus {
