--- a/src/style.css
+++ b/src/style.css
@@ -144,7 +144,7 @@ i { cursor: pointer; }
   text-decoration: line-through;
 }
 
-.dragging { border: 2px solid #0874fb; }
+.dragging { border: 2px solid #383c41; }
 
 .focus { background-color: #faf3db; }
 
