--- a/src/style.css
+++ b/src/style.css
@@ -132,7 +132,7 @@ i { cursor: pointer; }
 .btn {
   cursor: pointer;
   font-size: 1rem;
-  color: #8d8787;
+  color: #584f4f;
   background-color: #f8f9fa;
   border-bottom-left-radius: 0.5rem;
   border-bottom-right-radius: 0.5rem;
